fixed resume btn on mobile devices

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -150,7 +150,7 @@
 
 #resumebtn {
     height: 50px;
-    width: 400px;
+    width: 100%;
     margin-top: 20px;
 }
 
